[package]
name = "prometheus-parse"
description = "A simple parser for the Prometheus text format"
version = "0.2.2"
authors = ["Cameron Daniel <cam.daniel@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
keywords = ["prometheus", "parser"]
repository = "https://github.com/ccakes/prometheus-parse-rs"
homepage = "https://github.com/ccakes/prometheus-parse-rs"

[dependencies]
chrono = "^0.4"
itertools = "^0.10"
lazy_static = "^1.4"
regex = "^1.3"
