[package]
name = "prometheus-parse"
description = "A simple parser for the Prometheus text format"
version = "0.2.3"
authors = ["Cameron Daniel <cam.daniel@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
keywords = ["prometheus", "parser"]
repository = "https://github.com/ccakes/prometheus-parse-rs"
homepage = "https://github.com/ccakes/prometheus-parse-rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
itertools = { version = "0.10", default-features = false }
once_cell = { version = "1", default-features = false, features = ["std"] }
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
